--- a/src/modules/commander/module.yaml
+++ b/src/modules/commander/module.yaml
@@ -39,6 +39,7 @@ parameters:
                 12: Follow Me
                 13: Precision Land
                 16: Kamikaze
+                17: Intercept
                 100: External Mode 1
                 101: External Mode 2
                 102: External Mode 3
