--- a/src/modules/commander/module.yaml
+++ b/src/modules/commander/module.yaml
@@ -40,6 +40,7 @@ parameters:
                 13: Precision Land
                 16: Kamikaze
                 17: Intercept
+                18: Swarm
                 100: External Mode 1
                 101: External Mode 2
                 102: External Mode 3
