--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -119,6 +119,7 @@ set(msg_files
 	IrlockReport.msg
 	KamikazePronavStatus.msg
 	KamikazeVisualize.msg
+	WingmanPosition.msg
 	LandingGear.msg
 	LandingGearWheel.msg
 	LandingTargetInnovations.msg
