Add PX4 simulink app module

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -114,6 +114,7 @@ set(msg_files
 	HeaterStatus.msg
 	HoverThrustEstimate.msg
 	InputRc.msg
+	InterceptRollPitch.msg
 	InternalCombustionEngineStatus.msg
 	IridiumsbdStatus.msg
 	IrlockReport.msg
