Interceptor parametreleri eklendi

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -114,6 +114,8 @@ set(msg_files
 	HeaterStatus.msg
 	HoverThrustEstimate.msg
 	InputRc.msg
+	InterceptDebug.msg
+	InterceptorParams.msg
 	InterceptRollPitch.msg
 	InternalCombustionEngineStatus.msg
 	IridiumsbdStatus.msg
